Add basic Cloudrino client

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "cloudrino-bot",
   "version": "1.0.0",
   "description": "Simple Telegram Bot to check the queue on Clodrino.",
-  "main": "index.js",
+  "main": "src/bot.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -21,6 +21,8 @@
   },
   "homepage": "https://github.com/davidepedranz/coudrino-bot#readme",
   "dependencies": {
-    "node-telegram-bot-api": "^0.14.0"
+    "bluebird": "^2.10.2",
+    "node-telegram-bot-api": "^0.14.0",
+    "request-promise": "^0.4.3"
   }
 }
