--- a/package.json
+++ b/package.json
@@ -23,6 +23,6 @@
   "dependencies": {
     "bluebird": "^2.10.2",
     "node-telegram-bot-api": "^0.14.0",
-    "request-promise": "^0.4.3"
+    "request": "^2.64.0"
   }
 }
