--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "dependencies": {
     "bluebird": "^2.10.2",
     "node-telegram-bot-api": "^0.14.0",
+    "redis": "^2.1.0",
     "request": "^2.64.0"
   }
 }
