--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Simple Telegram Bot to check the queue on Clodrino.",
   "main": "src/bot.js",
   "scripts": {
+    "start": "node src/bot.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -25,5 +26,6 @@
     "node-telegram-bot-api": "^0.14.0",
     "redis": "^2.1.0",
     "request": "^2.64.0"
-  }
+  },
+  "private": true
 }
