--- a/.travis.yml
+++ b/.travis.yml
@@ -5,3 +5,6 @@ node_js:
   - "iojs"
 services:
   - redis-server
+addons:
+    code_climate:
+        repo_token: e2f82698af84edf290f4a96bb9ee40d4848fa60d36642e44df3cae7b36e2af92
