--- a/.travis.yml
+++ b/.travis.yml
@@ -3,8 +3,11 @@ node_js:
   - "4.1"
   - "4.0"
   - "iojs"
+script: npm run coverage
 services:
   - redis-server
+after_script:
+  - codeclimate-test-reporter < lcov.info
 addons:
     code_climate:
         repo_token: e2f82698af84edf290f4a96bb9ee40d4848fa60d36642e44df3cae7b36e2af92
