--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ script: npm run coverage
 services:
   - redis-server
 after_script:
-  - codeclimate-test-reporter < lcov.info
+  - ./node_modules/.bin/codeclimate-test-reporter < coverage/lcov.info
 addons:
     code_climate:
         repo_token: e2f82698af84edf290f4a96bb9ee40d4848fa60d36642e44df3cae7b36e2af92
