--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "request": "^2.64.0"
   },
   "devDependencies": {
+    "chai": "^3.3.0",
     "codeclimate-test-reporter": "^0.1.1",
     "istanbul": "^0.3.22",
     "mocha": "^2.3.3"
