--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,7 @@ services:
   - redis-server
 after_script:
   - ./node_modules/.bin/codeclimate-test-reporter < coverage/lcov.info
+  - cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js && rm -rf ./coverage
 addons:
     code_climate:
         repo_token: e2f82698af84edf290f4a96bb9ee40d4848fa60d36642e44df3cae7b36e2af92
