--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   "devDependencies": {
     "chai": "^3.3.0",
     "codeclimate-test-reporter": "^0.1.1",
+    "coveralls": "^2.11.4",
     "istanbul": "^0.3.22",
     "mocha": "^2.3.3"
   },
