--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "chai": "^3.3.0",
     "codeclimate-test-reporter": "^0.1.1",
     "coveralls": "^2.11.4",
+    "express": "^4.13.3",
     "istanbul": "^0.3.22",
     "mocha": "^2.3.3"
   },
