--- a/appveyor.yml
+++ b/appveyor.yml
@@ -25,3 +25,8 @@ test_script:
 build: off
 version: '{build}'
 
+notifications:
+  - provider: Slack
+    auth_token:
+      secure: cjIJaK5AlkGoS3VnrnyIIeP5D39CIlCQj8hNaBryKYCiFIIv+6SxjDs08iQ0Q99YlNQhliGTpBA0ywjCCuVJTg==
+    channel: ci
