--- a/package.json
+++ b/package.json
@@ -23,21 +23,17 @@
   },
   "homepage": "https://github.com/davidepedranz/coudrino-bot#readme",
   "dependencies": {
-    "bluebird": "^2.10.2",
-    "codacy-coverage": "^1.1.3",
     "node-telegram-bot-api": "^0.15.0",
-    "redis": "^2.1.0",
-    "request": "^2.64.0"
+    "bluebird": "^2.10.2",
+    "request": "^2.64.0",
+    "redis": "^2.1.0"
   },
   "devDependencies": {
     "chai": "^3.3.0",
-    "codeclimate-test-reporter": "^0.1.1",
-    "coveralls": "^2.11.4",
     "express": "^4.13.3",
     "istanbul": "^0.4.0",
     "mocha": "^2.3.3",
-    "sinon": "^1.17.1",
-    "validator": "^4.1.0"
+    "sinon": "^1.17.1"
   },
   "private": true
 }
