--- a/package.json
+++ b/package.json
@@ -23,10 +23,10 @@
   },
   "homepage": "https://github.com/davidepedranz/coudrino-bot#readme",
   "dependencies": {
-    "node-telegram-bot-api": "^0.19.0",
     "bluebird": "^3.0.5",
-    "request": "^2.67.0",
-    "redis": "^2.1.0"
+    "node-telegram-bot-api": "^0.20.1",
+    "redis": "^2.1.0",
+    "request": "^2.67.0"
   },
   "devDependencies": {
     "chai": "^3.3.0",
