--- a/appveyor.yml
+++ b/appveyor.yml
@@ -5,8 +5,8 @@ environment:
 install:
   # Install the Redis
   - nuget install redis-64 -excludeversion
-  - redis-64\redis-server.exe --service-install
-  - redis-64\redis-server.exe --service-start
+  - redis-64\tools\redis-server.exe --service-install
+  - redis-64\tools\redis-server.exe --service-start
   - '@ECHO Redis Started'
   # Get the latest stable version of Node.js or io.js
   - ps: Install-Product node $env:nodejs_version
